themes/haymarket-jr/stylesheets/menu.css
.content {
	width: 890px;
}

.column {
	margin: 0 5px;
	width: 420px;
	float: left;
}

.last {
	margin-right: 0;
}

#menu_container h2 {
	font-family: Copperplate, "Copperplate Gothic Bold", Helvetica, Arial, sans-serif;
}

#menu_container h4 {
	font-family: Copperplate, "Copperplate Gothic Bold", Helvetica, Arial, sans-serif;
	color: #fff;
}

#menu_container p {
	margin: 0;
	padding: 0;
}

br {
	display: block;
	height: 0;
}

.food_item {
	width: 290px;
	margin-bottom: 10px;
}

.food_name_description {
	width: 235px;
	float: left;
}

.note,
.description {
	font-family: Georgia, Times, "Times New Roman", serif;
	font-size: 12px;
	display: block;
	margin-left: 5px;
}

.price {
	font-family: Copperplate, "Copperplate Gothic Bold", Helvetica, Arial, sans-serif;
	width: 35px;
	float: right;
	color: #fff;
}

.daily_special {
	font-size: 10px;
	color: #fff;
}

#sides .food_item h4,
#sides .food_item,
#sauces .food_item h4,
#sauces .food_item {
	margin: 0;
	padding: 0;
	line-height: 1.3;
}

#sauces {
	width: 290px;
}

#sauces .food_item {
	width: 140px;
	float: left;
}

#legend,
.legend_icon {
	display: none;
}

